--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 APP_PORT = 5000
 APP_URL = http://localhost:5000
 
-DB_HOST = db4free.net
-DB_USER = 'must be filled'
-DB_PASS = 'must be filled'
-DB_NAME = muhiLibrary
-DB_PORT = 3306
+DB_HOST = '159.223.80.107'
+DB_USER = 'admin'
+DB_PASS = 'SMKmuhi48@'
+DB_NAME = 'siskaeeeeee'
+DB_PORT = '3306'
 
-TOKEN_SECRET = 'must be filled'
+TOKEN_SECRET = 'ini-rasahasia'
 TOKEN_ALGORITMA = HS256
