--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-APP_PORT = 5000
-APP_URL = http://localhost:5000
-
-DB_HOST = '159.223.80.107'
-DB_USER = 'admin'
-DB_PASS = 'SMKmuhi48@'
-DB_NAME = 'siskaeeeeee'
-DB_PORT = '3306'
-
 TOKEN_SECRET = 'ini-rasahasia'
 TOKEN_ALGORITMA = HS256
+
+DEV_APP_HOST=localhost
+DEV_APP_PORT=3100
+DEV_APP_JWT_SECRET=passwordnyarahasia
+DEV_APP_DB_HOST=localhost
+DEV_APP_DB_PORT=3306
+DEV_APP_DB_NAME=siskaeeeeee
+DEV_APP_DB_USER=admin
+DEV_APP_DB_PASSWORD=SMKmuhi48@
