--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "be-siskaeeeeee",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "npm run dev:env && nodemon ./bin/www -x",
+    "dev:env": "set NODE_ENV=dev"
   },
   "repository": {
     "type": "git",
